<resources>
    <string name="app_name">Project Magang App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Diskominfo Kota Jambi</string>
    <string name="nav_header_desc">Diskominfo Kota Jambi</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="start">Start</string>
    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_onboarding_1">Selamat Datang di SI Apps</string>
    <string name="description_onboarding_1"><![CDATA[Di aplikasi ini anda akan mendapat kan beberapa informasi tentang kominfo jambi.]]></string>
    <string name="title_onboarding_2">Kominfo Kota Jambi</string>
    <string name="description_onboarding_2"><![CDATA[Aplikasi yang didesain untuk warga jambi yang ingin mencari informasi tentang kominfo jambi.]]></string>
    <string name="title_onboarding_3">lorem ipsum dolor sit amet</string>
    <string name="description_onboarding_3"><![CDATA[Aplikasi ini dibuat untuk mempermudah warga jambi dalam mencari informasi tentang kominfo jambi.]]></string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="flt_button">Floating Button</string>
    <string name="toolbar_image_desc">AppBarImage</string>
    <string name="Welcome_Text">Selamat Datang, Situs Resmi Dinas Komunikasi dan Informatika Kota Jambi. Temukan informasi dan berita terkini tentang Kota Jambi atau jelajahi lebih banyak informasi mengenai Kota Jambi.
</string>
    <string name="Visi_misi">Visi dan Misi</string>
    <string name="Struktur_organisasi">Struktur Organisasi</string>
    <string name="bg_home">bg_gradient</string>
    <string name="News">Berita</string>
    <string name="open_berita"><![CDATA[Tampilkan Lebih Banyak >>]]></string>
    <string name="lorem_7">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="tv_visi">“Terselenggaranya jaringan komunikasi dan Informatika yang terintegrasi untuk mendukung terwujudnya Pemerintahan yang baik.”</string>
    <string name="title_misi">MISI</string>
    <string name="title_visi">VISI</string>
    <string name="icon_x">icon x</string>
    <string name="Copyright">"Copyright © Diskominfo Kota Jambi "</string>
    <string name="Tv_title_struktur">Struktur Organisasi \nDinas Komunikasi dan Informatika \nKota Jambi</string>
    <string name="desc_lampiran">
    \u0020Lampiran \u0020 \u0020 : Peraturan Walikota Jambi\n
        Nomor \u0020 \u0020 \u0020 \u0020 \u0020: 47 Tahun 2016\n
    Tentang \u0020 \u0020 \u0020 \u0020: Kedudukan, Susunan \n \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020
        Organisasi dan Fungsi Serta \n \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020  Tata Kerja Komunikasi dan  \n
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 Informatika Kota Jambi
</string>
    <string name="Kegiatan">Kegiatan</string>
    <string name="informasi">informasi</string>
    <string name="call_center">Call Center</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="lokasi">Lokasi</string>
    <string name="buku_panduan">Buku Panduan</string>
    <string name="sub_buku_panduan">Buku panduan menyediakan petunjuk langkah demi langkah tentang cara menggunakan produk atau sistem dengan benar serta membantu pengguna menghindari kesalahan umum yang dapat terjadi saat menggunakan produk atau sistem untuk pertama kali.</string>
    <string name="download">Unduh</string>
    <string name="kegiatan1">
        Jambi (ANTARA) - Pemerintah Kota Jambi dan Badan Amil Zakat Nasional (Baznas) menyalurkan beasiswa pendidikan senilai Rp1,88 miliar bagi ribuan siswa SD sederajat hingga madrasah aliyah swasta dan negeri.

        Ketua Baznas Kota Jambi Syamsir Naim, Kamis, mengatakan bantuan ini bersumber dari zakat, infak, serta sedekah ASN dan muzakki di Kota Jambi.

        Pada tahun ini Baznas Kota Jambi memberikan bantuan biaya pendidikan kepada 4.500 siswa SD, MI, MDTA, MTS, MA swasta dan negeri se-Kota Jambi yang tergolong kurang mampu.

        "Dengan jumlah dana total sebesar Rp1,88 miliar," katanya.

        Di tingkat SD, bantuan biaya pendidikan diberikan kepada 2.034 orang. Masing-masing siswa SD Negeri mendapatkan Rp400 ribu, sedangkan untuk SD swasta disalurkan bantuan untuk 66 orang masing-masing Rp250 ribu.

        Selanjutnya di tingkat SMP sederajat, jumlah siswa yang menerima sebanyak 16 orang untuk madrasah ibtidaiyah negeri (MIN), masing-masing Rp400 ribu.

        Untuk madrasah ibtidaiyah swasta sebanyak 200 orang masing-masing Rp250 ribu. Untuk setingkat madrasah diniyah takmiliyah awaliyah (MDTA) sebanyak 290 siswa, dengan besaran dana Rp250 ribu per orang.

        Tingkat SMPN sebanyak 1.504 orang, masing-masing Rp500 ribu, tingkat SMP swasta sebanyak 78 orang masing-masing Rp350 ribu.

        Tingkat MTs negeri sebanyak 175 orang (Rp500 ribu), MTs swasta sebanyak 102 orang (Rp350 ribu), serta MA negeri sebanyak 35 orang masing-masing Rp600 ribu.

        Syamsir mengatakan, berkat komitmen Pemkot Jambi dalam penyaluran zakat, infak, dan sedekah melalui Baznas, setiap tahunnya terjadi peningkatan signifikan terhadap penerimaan zakat.

        Selain itu, dari penerimaan itu Baznas Kota Jambi dapat meningkatkan jumlah bantuan yang disalurkan.

        Baznas juga mengucapkan terima kasih kepada para muzakki yang telah menyalurkan zakat, infak, dan sedekah.

        Penjabat Wali Kota Jambi Sri Purwaningsih mengatakan Pemkot Jambi akan terus berupaya menciptakan pendidikan yang berkualitas.

        Pemkot Jambi, kata dia, menggelontorkan dana untuk pembangunan pendidikan setiap tahunnya.

        Di bidang pendidikan, Baznas ikut berkontribusi dengan penyaluran bantuan biaya pendidikan bagi anak kurang mampu.

        Dia berharap, rutinnya penyaluran beasiswa pendidikan ini akan memacu semangat anak-anak didik dalam belajar maupun mengaji. Sehingga meningkatkan kualitas pendidikan di Kota Jambi.

        Sri meminta ke depan bantuan biaya pendidikan ini harus ditingkatkan baik dari sisi nilai maupun jumlah penerima.
    </string>
    <string name="berita1">JAMBIUPDATE.CO, JAMBI – Badan Kepegawaian dan Sumber Daya Manusia Daerah (BKPSDMD) sudah memfilter pendaftar CPNS Pemeritnah Kota Jambi.\n
\n
Sejak dibuka pendaftaran pada 20 Agustus 2024, sudah terdata 50 pendaftar untuk CPNS Pemkot Jambi.\n
\n
"Terakhir Jumat (23/8/2024) masih dibawah 50 an yang submit milih daftar ke Pemerintah Kota Jambi," kata Kepala Bidang Pengadaan Pemberhentian dan Informasi (PPI) BKPSDMD Kota Jambi, Andika Wahyu, Minggu (25/8/2024).\n
\n
"Tapi yang belum submit sudah 400an," tambahnya.\n
\n
Andika mengungkapkan, dari data yang difilter pihaknya, sebagian besar pendaftar banyak dari luar Kota Jambi, termasuk dari provinsi Sumatera Selatan.\n
\n
"Banyak dari luar kota masih dalam provinsi Jambi. Terpantau ada yang dari Batanghari, Muaro Jambi. Ada juga dari provinsi Sumsel," ungkapnya.\n
\n
Andika menegaskan, tidak ada perubahan signifikan dalam proses pendaftaran CPNS tahun ini.\n
\n
"Pendaftaran sesuai jadwal yang telah diumumkan, tanpa ada perubahan. Kami hanya akan mengumumkan dan memverifikasi berkas awal yang masuk," ujarnya.\n
\n
Menurutnya, tanggung jawab terkait website pendaftaran berada di bawah wewenang Panselnas atau pusat, bukan pemkot Jambi.\n
\n
Andika Wahyu juga mengungkapkan bahwa jumlah pendaftar biasanya membludak di akhir periode pendaftaran, meskipun jumlah pendaftar di hari pertama belum dapat dipastikan. Rekrutmen CPNS di kota Jambi tersedia 60 formasi, terbagi rata antara tenaga kesehatan dan tenaga teknis.\n
\n
Berdasarkan Peraturan Menpan nomor 6 tahun 2024, calon peserta hanya diperbolehkan memilih satu jenis formasi, baik CPNS atau PPPK, dalam satu tahun anggaran.\n
\n
"Formasi tenaga teknis mencakup berbagai instansi seperti Satpol PP, Inspektorat, dan Diskominfo, dengan nilai ambang batas minimal SKD sebesar 311," sebutnya.\n
\n
Kuota untuk penyandang disabilitas, ditetapkan minimal 2 persen dari setiap formasi, dan terdapat formasi untuk tamatan SMA di Satpol PP.\n
\n
"Formasi untuk guru dialihkan ke PPPK, sementara rekrutmen PPPK masih menunggu informasi dari pemerintah pusat. Pemkot Jambi mengusulkan total 3.296 formasi PPPK, dengan rincian 87 untuk kesehatan, 422 untuk guru, dan 2.786 untuk tenaga teknis," pungkasnya.</string>
    <string name="berita2">
        JAMBI, KOMPAS.TV - Tugu Keris yang berada di pusat perkantoran Wali Kota merupakan ikon Kota Jambi. Bentuknya menyerupai Keris Siginjai, salah satu destinasi wisata kota.\n\n
        Selain itu, di kawasan ini pengunjung bisa menikmati kuliner khas Jambi dan area permainan.\n\n
        Tugu Keris Siginjai yang berada di Kelurahan Pal Lima, Kecamatan Kota Baru, Kota Jambi ini memiliki bentuk keris Siginjai yang menyerupai bentuk keris kerajaan Jambi.\n
        Selain aksesnya yang dekat dengan pusat kota, bentuknya juga sangat menarik. Di lokasi tersebut, pengunjung pun bisa berswafoto.\n\n
        Bagi kalian yang hobi olahraga, kalian juga bisa memanfaatkan sarana olahraga yang disediakan oleh Pemkot Jambi di sepanjang area Tugu Keris, termasuk alat olahraga dan area jogging track.
    </string>
</resources>