<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_visi_misi"
            android:icon="@drawable/purpose"
            android:title="@string/Visi_misi" />
        <item
            android:id="@+id/nav_struktur"
            android:icon="@drawable/icon_organization_structure"
            android:title="@string/Struktur_organisasi"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/icon_gallery"
            android:title="@string/menu_gallery" />

    </group>
</menu>