<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projectmagangapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery"
            app:enterAnim="@anim/animate_fade_enter" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_visi_misi"
            app:enterAnim="@anim/animate_fade_enter" />
        <action
            android:id="@+id/action_nav_home_to_structureFragment"
            app:destination="@id/nav_struktur"
            app:enterAnim="@anim/animate_fade_enter" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.projectmagangapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_visi_misi"
        android:name="com.example.projectmagangapp.ui.visi_misi.VisiMisiFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_organization" />
    <fragment
        android:id="@+id/nav_struktur"
        android:name="com.example.projectmagangapp.ui.structure.StructureFragment"
        android:label="fragment_structure"
        tools:layout="@layout/fragment_structure" />
</navigation>