<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".BukuPanduanFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E8EEF6">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_buku_panduan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buku_panduan"
                    android:textAlignment="center"
                    android:textColor="@color/textcolor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <com.codesgood.views.JustifiedTextView
                    android:id="@+id/tv_sub_buku_panduan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFeatureSettings="pnum,lnum"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/sub_buku_panduan"
                    android:textColor="@color/textcolor"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/Btn_bukpad_download"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:layout_marginTop="16dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Tambahkan konten lain di sini jika diperlukan -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textcolor"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="32dp">

                <ImageView
                    android:id="@+id/logo_diskominfo_footer"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="22dp"
                    android:contentDescription="@string/bg_home"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo_kominfo_full"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/icon_x"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_x"
                    app:layout_constraintStart_toStartOf="@+id/logo_diskominfo_footer"
                    app:layout_constraintTop_toBottomOf="@+id/logo_diskominfo_footer"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_insta"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/logo_diskominfo_footer"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="TODO"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_yt"
                    app:layout_constraintEnd_toEndOf="@+id/logo_diskominfo_footer"
                    app:layout_constraintTop_toBottomOf="@+id/logo_diskominfo_footer" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/icon_linkedin"
                    app:layout_constraintEnd_toStartOf="@+id/imageView4"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/logo_diskominfo_footer" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@string/Copyright"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="11sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>