<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.visi_misi.VisiMisiFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/textcolor"
            android:text="@string/title_visi" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:padding="8dp"
            android:text="@string/tv_visi"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:ignore="VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:padding="8dp"
            android:text="@string/title_misi"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/textcolor"
            android:fontFamily="@font/poppins_bold"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/misi_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:padding="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tv_visi"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:ignore="VisualLintLongText" />

    </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/textcolor"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="32dp">

                <ImageView
                    android:id="@+id/logo_diskominfo_footer"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="22dp"
                    android:contentDescription="@string/bg_home"
                    android:scaleType="fitXY"

                    android:src="@drawable/logo_kominfo_full"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/icon_x"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_x"
                    app:layout_constraintStart_toStartOf="@+id/logo_diskominfo_footer"
                    app:layout_constraintTop_toBottomOf="@+id/logo_diskominfo_footer"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_insta"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/logo_diskominfo_footer"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="TODO"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_yt"
                    app:layout_constraintEnd_toEndOf="@+id/logo_diskominfo_footer"
                    app:layout_constraintTop_toBottomOf="@+id/logo_diskominfo_footer" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/icon_linkedin"
                    app:layout_constraintEnd_toStartOf="@+id/imageView4"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/logo_diskominfo_footer" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/Copyright"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="11sp" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
